Change section and subsection headers.

--- a/pagesetup.tex
+++ b/pagesetup.tex
@@ -16,4 +16,4 @@
   \subsection}[runin]{\large\bfseries}{}{0em}{}
 
 \titleformat{%
-  \section}[runin]{\large\bfseries}{\thesection}{0em}{}
+  \section}[runin]{\Large\bfseries}{\thesection}{0.5em}{}
